--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+/*Animate the logo with keyframes. It should start at a width of 25px and grow to 475px.  It should also start with an opacity of 0 and end with an opacity of 1. The animation should take 5 seconds and only happen when the page is loaded*/
+@keyframes animateLogo {
+    0% {
+      width: 25px;
+      opacity: 0;
+    }
+    100% {
+      width: 475px;
+      opacity: 1;
+    }
+  }
+  
+  /* Apply animation to the logo element */
+#logo {
+    animation: animateLogo 5s forwards; /* Animation lasts 5 seconds and persists after it finishes */
+}
+
 /*Edit the body element to use the Poppins font (using Google fonts) with serif as a backup.  It should also use the image “concrete_seamless.png” as a background-image with a backup color of #f1f1f1.*/
 body {
     font-family: 'Poppins', sans-serif;
@@ -21,3 +38,146 @@ header{
 
 /*Style the links so that they have the same color even after they have been visited. This is a “challenge” problem. You should not give or receive help when completing it.
 */
+a:link,
+a:visited {
+  color: blue; 
+}
+
+/*Identify the proper selector to style ONLY those header elements that are direct children of a card class.  The required styling is the following:
+background: #288088,
+solid 2px border using #45ADAD,
+20px of padding on the top and the bottom, 
+50px border-radius on the top left and right corners.
+ */
+.card > header {
+    background: #288088; 
+    border: 2px solid #45ADAD; 
+    padding: 20px 0; 
+    border-top-left-radius: 50px; 
+    border-top-right-radius: 50px; 
+}
+
+.card {
+    border-radius: 50px 50px 0 0; 
+}
+
+/*Edit the css for the card class to match our example. Achieve this by using a flex-property to specify an initial “size” of 450px.  You need to think about this from a “flex” perspective and realize that flex-direction will affect the size of the elements.  You can see that in the mobile view they all have the same width. 
+
+Edit the css for the pricing class to match our example. You should use flex and the cards should be centered both horizontally and vertically.*/
+.card {
+    width: 450px; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: stretch;
+}
+.pricing {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+}
+
+
+/*Style the images in the gallery class. These elements will have a solid 10px border with a color of #50C7C7, 10px margin on all four sides and a width of 300px.  
+*/
+.gallery img {
+    border: 10px solid #50C7C7;
+    margin: 10px;
+    width: 300px
+}
+
+.gallery {
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: center;
+
+}
+
+  /*Edit the css for the header tag (all instances) and the nav_links class to match our example using flex-properties. The logo should be as far to the left as possible and the links as far to the right as possible. Use flex properties, NOT position properties.
+*/
+@media (min-width: 900px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center; 
+        flex-direction: row;
+    }
+
+    .nav_links {
+        display: flex;
+        flex-direction: row;
+    }
+/*Edit the css for the pricing and card classes to match our example. Part of achieving this is by using a flex-property to specify a “size” of 275px. Notice that the elements do not have the same height, but do have the same width.
+*/
+    .pricing, .card {
+        flex: 0 1 275px; 
+    }
+
+/*Modify the first header (the one not inside main) so that it remains visible at the top of the screen even as we scroll down. Make sure that it is always visible. */
+
+    body > header {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+    .about {
+        margin-top: 100px; 
+    }
+}
+
+/*The logo should appear but not be animated if prefers-reduced-motion is selected in the accessibility preferences. 
+*/
+@media (prefers-reduced-motion: reduce) {
+    #logo {
+        animation: none; 
+    }
+}
+
+@media print and (orientation: portrait) {
+    /* Change font to Arial with a backup of Helvetica */
+    body {
+        font-family: Arial, Helvetica;
+        background-image: none;
+
+    }
+    
+    /* Edit nav_links elements for spacing */
+    .nav {
+        width: 100%; 
+        
+    }
+    .nav_links {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+    
+    /*Edit pricing class for alignment along the bottom*/
+    .pricing {
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+    }
+    
+    /*The card elements should have a solid border 2px of #45ADDD and use flex-basis of 325px. */
+    .card {
+        border: 2px solid #45ADDD;
+        flex-basis: 325px;
+    }
+    
+    /* Hide gallery */
+    .gallery, #gallery {
+        display: none;
+    }
+    
+    /*Without using list-style-type add the thumbs up entity as shown in the cards.*/
+    .card li:nth-of-type(2)::after {
+        content: '\1F44D'; 
+      }
+    footer {
+        page-break-before: always;
+    }
+    
+    
+}
